tests/security/taintedInputFromMethodReturnTypeSimple/output.txt
ERROR: TaintedData - input.hack:12:22 - Detected tainted SQL